--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "jest-css-modules-transform": "^4.4.2",
     "prettier": "^2.8.6",
     "stylelint": "^15.3.0",
     "stylelint-config-recess-order": "^4.0.0",
