--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "husky": "^8.0.3",
     "jest-css-modules-transform": "^4.4.2",
     "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "stylelint": "^15.3.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^31.0.0",
     "stylelint-order": "^6.0.3",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5"
   }
 }
